force-app/main/default/objects/clariti__LedgerTreatment__c/clariti__LedgerTreatment__c.object-meta.xml
<CustomObject>
    <description>Ledger Treatments define how transactions are recorded in the accounting books.</description>
    <label>Ledger Treatment</label>
    <nameField>
        <displayFormat>LT-{000}</displayFormat>
        <label>Ledger Treatment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>