force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__Active__c.field-meta.xml
<CustomField>
    <fullName>clariti__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To deactivate the ledger treatment, clear the checkbox. This won’t affect existing journal entry items created via this ledger treatment</description>
    <inlineHelpText>To deactivate the ledger treatment, clear the checkbox. This won’t affect existing journal entry items created via this ledger treatment</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>