force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__CreditAccountName__c.field-meta.xml
<CustomField>
    <fullName>clariti__CreditAccountName__c</fullName>
    <description>Specify the name of the ledger account which will be Credited</description>
    <inlineHelpText>Specify the name of the ledger account which will be Credited</inlineHelpText>
    <label>Credit Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>