force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__CreditAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__CreditAccountNumber__c</fullName>
    <description>Specify the number of the ledger account which will be Credited</description>
    <inlineHelpText>Specify the number of the ledger account which will be Credited</inlineHelpText>
    <label>Credit Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>