force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__DebitAccountName__c.field-meta.xml
<CustomField>
    <fullName>clariti__DebitAccountName__c</fullName>
    <description>Specify the name of the ledger account which will be Debited</description>
    <inlineHelpText>Specify the name of the ledger account which will be Debited</inlineHelpText>
    <label>Debit Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>