force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__DebitAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__DebitAccountNumber__c</fullName>
    <description>Specify the number of the ledger account which will be Debited</description>
    <inlineHelpText>Specify the number of the ledger account which will be Debited</inlineHelpText>
    <label>Debit Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>