force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__JournalEntryDate__c.field-meta.xml
<CustomField>
    <fullName>clariti__JournalEntryDate__c</fullName>
    <description>The date when the journal entry takes effect in the accounting books</description>
    <inlineHelpText>The date when the journal entry takes effect in the accounting books</inlineHelpText>
    <label>Journal Entry Date</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>