force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__JournalEntryType__c.field-meta.xml
<CustomField>
    <fullName>clariti__JournalEntryType__c</fullName>
    <label>Journal Entry Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Correct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>