force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__LedgerRule__c.field-meta.xml
<CustomField>
    <fullName>clariti__LedgerRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ledger Rule</label>
    <referenceTo>clariti__LedgerRule__c</referenceTo>
    <relationshipLabel>Ledger Treatments</relationshipLabel>
    <relationshipName>LedgerTreatments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>