force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__ProcessingOrder__c.field-meta.xml
<CustomField>
    <fullName>clariti__ProcessingOrder__c</fullName>
    <description>Enter 1 is this treatment should be processed before all other treatments, 2 is it should be second, etc.</description>
    <inlineHelpText>Enter 1 is this treatment should be processed before all other treatments, 2 is it should be second, etc.</inlineHelpText>
    <label>Processing Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>