force-app/main/default/objects/clariti__LedgerTreatment__c/fields/clariti__TransactionDescription__c.field-meta.xml
<CustomField>
    <fullName>clariti__TransactionDescription__c</fullName>
    <description>Specify reference information for the transaction. This will be populated on the journal entry items created via this treatment</description>
    <inlineHelpText>Specify reference information for the transaction. This will be populated on the journal entry items created via this treatment</inlineHelpText>
    <label>Transaction Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>