force-app/main/default/objects/clariti__LedgerTreatment__c/listViews/clariti__All.listView-meta.xml
<ListView>
    <fullName>clariti__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>